# wlroots

./: .gitlab-ci.yml  meson.build  meson_options.txt
.builds/: alpine.yml  archlinux-cross-x86.yml  archlinux.yml  freebsd.yml  x86-linux-gnu.ini
backend/: backend.c
backend/drm/: atomic.c  backend.c  cvt.c  drm.c  legacy.c  libliftoff.c  meson.build  monitor.c  properties.c  renderer.c  util.c
backend/headless/: backend.c  output.c
backend/libinput/: backend.c  events.c  pointer.c  tablet_pad.c  tablet_tool.c
backend/session/: dev.c  dev_demi.c  dev_udev.c  meson.build  session.c
docs/: env_vars.md
examples/: cairo-buffer.c  dmabuf-capture.c  embedded.c  explicit-sync.c  fullscreen-shell.c  input-inhibitor.c  layer-shell.c  meson.build  mirror.c  multi-pointer.c  output-layers.c  output-layout.c  output-tester.c  pointer.c  quads.c  rotation.c  scene-graph.c  screencopy-dmabuf.c  screencopy.c  simple.c  tablet.c  text-input.c  touch.c
include/: meson.build
include/wlr/: api.h  (+3 more)
protocol/: dbg-txn.xml  ext-action-binder-v1.xml  ext-screencopy-v1.xml  ext-virtual-keyboard-v1.xml  fractional-scale-v1.xml  meson.build  screencopy-unstable-v1.xml  wlr-output-management-unstable-v1.xml
render/: color.c  color_lcms2.c  dmabuf_linux.c  drm_syncobj.c  egl.c  meson.build  pass.c  pixel_format.c  swapchain.c  timeline.c  wlr_renderer.c  wlr_texture.c
render/allocator/: allocator.c  dma_heap.c  drm_dumb.c  gbm.c  meson.build  shm.c
tinywl/: Makefile  meson.build  tinywl.c
types/: meson.build  wlr_action_binder_v1.c  wlr_alpha_modifier_v1.c  wlr_buffer.c  wlr_color_representation_v1.c  wlr_commit_queue_v1.c  wlr_compositor.c  wlr_configurable.c  wlr_content_type_v1.c  wlr_cursor.c  wlr_damage_ring.c  wlr_data_control_v1.c  wlr_dbg_txn.c  wlr_drm.c  wlr_drm_lease_v1.c  wlr_export_dmabuf_v1.c  wlr_ext_screencopy_v1.c  wlr_ext_virtual_keyboard_v1.c  wlr_fifo.c  wlr_fixes.c  wlr_foreign_toplevel_management_v1.c  wlr_fractional_scale_v1.c  wlr_frame_scheduler.c  wlr_fullscreen_shell_v1.c  wlr_gamma_control_v1.c  wlr_idle.c  wlr_idle_inhibit_v1.c  wlr_input_device.c  wlr_input_inhibitor.c  wlr_input_mapper.c  wlr_input_method_v2.c  wlr_keyboard.c  wlr_keyboard_group.c  wlr_keyboard_shortcuts_inhibit_v1.c  wlr_layer_shell_v1.c  wlr_linux_dmabuf_v1.c  wlr_linux_drm_syncobj_v1.c  wlr_linux_explicit_synchronization_v1.c  wlr_matrix.c  wlr_mirror.c  (+40 more)
util/: addon.c  array.c  box.c  region.c  shm.c  time.c  token.c
xcursor/: wlr_xcursor.c  xcursor.c
xwayland/: server.c  shell.c  sockets.c  sockets.h  xwayland.c  xwm.c
(+189 files in other folders)
